Separate runnable commands from expected output for: cdata, datasource-refresh, datasource-streaming, join-connections. Minor update to svg